--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1> Ponyo </h1>
+    <p> This is a test </p>
+  </body>
+</html>
