--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <img src="jellyifs.png" alt="Image description" />
     <h1> Ponyo </h1>
     <p> This is a test </p>
   </body>
